# ChangeLog for media-libs/zvbi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/zvbi/ChangeLog,v 1.47 2011/02/15 20:15:21 aballier Exp $

  15 Feb 2011; Alexis Ballier <aballier@gentoo.org> zvbi-0.2.33.ebuild,
  +files/zvbi-0.2.33-libpng15.patch:
  fix build with libpng 1.5

  20 Aug 2010; Samuli Suominen <ssuominen@gentoo.org> zvbi-0.2.33.ebuild,
  +files/zvbi-0.2.33-glibc212.patch:
  Fix building with recent glibc wrt #333621 by Charlie Gehlin.

  19 May 2010; Raúl Porcel <armin76@gentoo.org> zvbi-0.2.33.ebuild:
  ia64 stable wrt #319539

  13 Nov 2009; Joseph Jezak <josejx@gentoo.org> zvbi-0.2.33.ebuild:
  Marked ppc64 stable.

  13 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> zvbi-0.2.33.ebuild:
  ppc stable, bug #249391

  09 Nov 2008; Tobias Klausmann <klausman@gentoo.org> zvbi-0.2.33.ebuild:
  Stable on alpha, bug #245774

  09 Nov 2008; Markus Meier <maekke@gentoo.org> zvbi-0.2.33.ebuild:
  amd64/x86 stable, bug #245774

  06 Nov 2008; Ferris McCormick <fmccor@gentoo.org> zvbi-0.2.33.ebuild:
  Sparc stable, part of Bug #245774 (all tests pass).

  19 Oct 2008; Markus Rothe <corsair@gentoo.org> zvbi-0.2.33.ebuild:
  Added ~ppc64

  24 Sep 2008; Alexis Ballier <aballier@gentoo.org> zvbi-0.2.33.ebuild:
  keyword ~x86-fbsd

*zvbi-0.2.33 (16 Sep 2008)

  16 Sep 2008; Alexis Ballier <aballier@gentoo.org> +zvbi-0.2.33.ebuild:
  version bump

*zvbi-0.2.32 (28 Aug 2008)

  28 Aug 2008; Alexis Ballier <aballier@gentoo.org> +zvbi-0.2.32.ebuild:
  version bump

*zvbi-0.2.31 (16 Aug 2008)

  16 Aug 2008; Alexis Ballier <aballier@gentoo.org> +zvbi-0.2.31.ebuild:
  version bump

  22 Jul 2007; Samuli Suominen <drac@gentoo.org> zvbi-0.2.22.ebuild:
  Remove virtual/x11 references.

  21 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> -zvbi-0.2.17.ebuild:
  Remove old version.

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> zvbi-0.2.22.ebuild:
  Stable on Alpha.
