@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/zvbi/Attic/zvbi-0.2.33.ebuild,v 1.11 2011/02/15 20:15:21 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/zvbi/Attic/zvbi-0.2.33.ebuild,v 1.12 2012/04/22 14:44:53 maekke Exp $
 
 EAPI=2
 inherit eutils libtool
@@ -11,7 +11,7 @@ HOMEPAGE="http://zapping.sourceforge.net"
 
 LICENSE="GPL-2 LGPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ~arm ia64 ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE="doc dvb nls static-libs v4l X"
 
 RDEPEND=">=media-libs/libpng-1.4
