@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/Attic/vlc-2.0.1.ebuild,v 1.3 2012/03/22 01:53:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/vlc/Attic/vlc-2.0.1.ebuild,v 1.4 2012/04/22 14:46:36 maekke Exp $
 
 EAPI="4"
 
@@ -39,7 +39,7 @@ LICENSE="LGPL-2.1 GPL-2"
 SLOT="0"
 
 if [ "${PV%9999}" = "${PV}" ] ; then
-	KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+	KEYWORDS="~alpha ~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 else
 	KEYWORDS=""
 fi
