@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/zvbi
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/zvbi/ChangeLog,v 1.47 2011/02/15 20:15:21 aballier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/zvbi/ChangeLog,v 1.48 2012/04/22 14:44:53 maekke Exp $
+
+  22 Apr 2012; Markus Meier <maekke@gentoo.org> zvbi-0.2.33.ebuild:
+  add ~arm, bug #397891
 
   15 Feb 2011; Alexis Ballier <aballier@gentoo.org> zvbi-0.2.33.ebuild,
   +files/zvbi-0.2.33-libpng15.patch:
